# Telegram-Toolbox-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
bot/: states.py
bot/decorators/: finalize_handler.py
bot/handlers/: __init__.py  base64_handler.py  fake_profile_handler.py  json_to_csv_handler.py  lorem_handler.py  password_handler.py  start_handler.py
bot/keyboards/: base64_keyboard.py  common_keyboard.py  fake_profile_keyboard.py  lorem_keyboard.py  password_keyboard.py
bot/services/: base64_utils_service.py  fake_profile_generator_service.py  file_converter_service.py  lorem_generator_service.py  password_generator_service.py
